<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="welcome.SecondFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:contentDescription="@string/welcome"
            android:src="@drawable/welcome_2"
            app:layout_constraintBottom_toTopOf="@+id/tv_desc_welcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_desc_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="35dp"
            android:fontFamily="@font/montserrat_semibold"
            android:gravity="center_horizontal"
            android:text="@string/desc_welcome_2"
            android:textColor="?attr/android:textColorPrimary"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_next"
            app:layout_constraintEnd_toEndOf="@+id/iv_welcome"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/iv_welcome"
            app:layout_constraintTop_toBottomOf="@+id/iv_welcome" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/next"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>