<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/login"
            android:textColor="@color/green"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_marginTop="48dp"/>

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/email"
            android:textColor="?attr/android:textColorPrimary"
            android:layout_marginTop="48dp"
            android:layout_gravity="start"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_edit_text_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:startIconDrawable="@drawable/baseline_email_24">

            <com.gazura.projectcapstone.custom.MyEmailEditText
                android:id="@+id/ed_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/password"
            android:textColor="?attr/android:textColorPrimary"
            android:layout_marginTop="32dp"
            android:layout_gravity="start"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_edit_text_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/baseline_lock_24">

            <com.gazura.projectcapstone.custom.MyPasswordEditText
                android:id="@+id/ed_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/green"
            android:text="@string/login"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_dont_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/dont_have_account"
            android:textColor="?attr/android:textColorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"/>

    </LinearLayout>
</ScrollView>